# stock-ingest

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml
ansible/: playbook.yml
ansible/inventory/: hosts.yml
ansible/roles/api/defaults/: main.yml
ansible/roles/api/tasks/: main.yml
config/tickers/: tickers.yaml
dashboard/: grafana_dashboard.json
sql_factory/: swing_trade_summary.sql
src/api/: dependencies.py  main.py
src/api/routes/: jobs.py  tables.py  tickers.py  trades.py
src/common/: database.py  kafka.py  logger.py  schema_registry.py
src/ingest/: broker.py
src/schema_registry/: sql_tables.py
src/services/: __init__.py  broker.py  database.py  kafka.py  service_registry.py
src/strategies/: strategies.py
src/technical_analytics/api/: dependencies.py
src/technical_analytics/api/routes/: jobs.py  tables.py  tickers.py  trades.py
src/technical_analytics/schema_registry/: response_models.py  sql_tables.py
src/technical_analytics/services/: broker.py  database.py  service_registry.py
src/technical_analytics/strategies/: monte_carlo.py  monte_carlo_improved.py  strategies.py
src/technical_analytics/transform/: pipeline.py
src/technical_analytics/utils/: utils.py
src/transform/: pipeline.py  run_correlation.py  run_indicators.py  run_ingest.py  stream_job.py
src/utils/: utils.py
